Fixed header spacing

--- a/FrontEnd/VitalSense/src/App.css
+++ b/FrontEnd/VitalSense/src/App.css
@@ -20,7 +20,7 @@ body {
 }
 
 .main-content {
-  padding-top: 60px; 
+  margin-top: 100px; 
   background-color: #fbfefd; 
   padding: 2rem;
 }
